Bug 450686 - Kate window always opens too small
Summary: Kate window always opens too small
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-22 03:15 UTC by Aaron Williams
Modified: 2022-03-05 18:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Williams 2022-02-22 03:15:02 UTC
SUMMARY
For some reason, every time I create a new kate session, kate opens in a corner of my screen and the window is far too small to use. I do not see any overrides  There are no special window settings or application settings as far as I can tell.

I might add that my desktop setup consists of two 1920x1200 displays and two 3840x2160 displays. The primary displays are the 3840x2160 screens and this is where new sessions are created.

I do not see this issue with other KDE applications.

STEPS TO REPRODUCE
1.  Start a new KDE session, i.e. on the command line "kate -n"

OBSERVED RESULT
Kate appears in a corner of the screen and defaults to only 20 columns.

EXPECTED RESULT
I expect a reasonably sized Kate window that can display at least 80 columns without having to resize it.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: OpenSUSE 15.3
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version:  5.91.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

It appears that these settings are stored in the anonymous session, though even though I resize the window before closing the new settings do not seem to take effect. If I manually edit the file it still reverts to the old settings, though I have not tried closing all instances of Kate and I have many active instances since I'm in the middle of several big projects.
Comment 1 Waqar Ahmed 2022-02-22 19:12:53 UTC
Using X or wayland?
Comment 2 Christoph Cullmann 2022-02-22 19:17:15 UTC
It is true that I can reproduce this e.g. with

kate -n -s sdfsfdssdfsdfdsfsdfsjdfsjf

On Wayland we start with the minimal size.
Comment 3 Waqar Ahmed 2022-02-22 19:23:14 UTC
I can also reproduce but with dolphin, for some reason Kate is always maximized for me (lucky I guess). Also see

https://community.kde.org/Plasma/Wayland_Showstoppers
Comment 4 Bug Janitor Service 2022-03-05 18:36:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/659
Comment 5 Christoph Cullmann 2022-03-05 18:50:49 UTC
Git commit ad04f9bcf4f807d5a2b96f119231a12f8f7c17e7 by Christoph Cullmann.
Committed on 05/03/2022 at 18:35.
Pushed by cullmann into branch 'master'.

ensure some proper initial size

ensure we start with some usable window size even
if there is no stored data about it

raise initial size to 800x600 or 0.6 of available screen
size

ensure we cut it with the maximal available screen size

M  +3    -4    kate/katemainwindow.cpp
M  +3    -4    kwrite/kwrite.cpp

https://invent.kde.org/utilities/kate/commit/ad04f9bcf4f807d5a2b96f119231a12f8f7c17e7