ensure some proper initial size

ensure we start with some usable window size even
if there is no stored data about it

raise initial size to 800x600 or 0.6 of available screen
size

ensure we cut it with the maximal available screen size

BUG: 450686