kwrite/kwrite.cpp
@@ -40,6 +40,7 @@
 #include <QLabel>
 #include <QMenuBar>
 #include <QMimeData>
+#include <QScreen>
 #include <QTextCodec>
 #include <QTimer>
 
@@ -118,10 +119,8 @@ KWrite::~KWrite()
 
 QSize KWrite::sizeHint() const
 {
-    /**
-     * have some useful size hint, else we have mini windows per default
-     */
-    return (QSize(640, 480).expandedTo(minimumSizeHint()));
+    // ensure some proper sizing per default
+    return (QSize(800, 600).expandedTo(minimumSizeHint())).expandedTo(screen()->availableSize() * 0.6).boundedTo(screen()->availableSize());
 }
 
 void KWrite::setupActions()
